--- a/app/src/main/res/layout/activity_videomonitor_softcodec.xml
+++ b/app/src/main/res/layout/activity_videomonitor_softcodec.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <SurfaceView
         android:id="@+id/camera_surfaceView_monitor"
-        android:layout_width="1dp"
-        android:layout_height="1dp" />
+        android:layout_width="@dimen/dimen_100"
+        android:layout_height="@dimen/dimen_100" />
 
     <com.tencent.av.opengl.ui.GLRootView
         android:id="@+id/av_video_gl_root_view_monitor"
-        android:layout_width="1dp"
-        android:layout_height="1dp" />
+        android:layout_width="@dimen/dimen_100"
+        android:layout_height="@dimen/dimen_100" />
 
 </LinearLayout>
