--- a/app/src/main/res/layout/friendlist_item.xml
+++ b/app/src/main/res/layout/friendlist_item.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/head_portrait_bg"
         android:layout_gravity="center_horizontal">
 
-        <com.tencent.CircleImageView
+        <com.booyue.widget.CircleImageView
             android:id="@+id/iv_avatar"
             android:layout_width="@dimen/dimen_145"
             android:layout_height="@dimen/dimen_145"
